tests/paczka1/small_fuzzy/61849796.err
Error in line 5: yfz6kVixhG S754 10,2
Error in line 4: S754 A930 5,4
Error in line 7: S754 A415 76,1
Error in line 14: AbGakCaZ6 A930 23,2
